include prom-operator

--- a/system/kube-monitoring-virtual/values.yaml
+++ b/system/kube-monitoring-virtual/values.yaml
@@ -2,7 +2,7 @@ global:
   region: DEFINED-AS-VALUE
   domain: DEFINED-AS-VALUE
 
-  clusterType: kubernikus-virtual
+  clusterType: virtual
 
   # Prometheus via operator.
   prometheus_operated:
