--- a/system/kube-monitoring-virtual/requirements.yaml
+++ b/system/kube-monitoring-virtual/requirements.yaml
@@ -2,3 +2,6 @@ dependencies:
   - name: kube-monitoring
     repository: https://charts.eu-de-2.cloud.sap
     version: 2.0.8
+  - name: prometheus-operator
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
