--- a/openstack/arc/templates/api-deployment.yaml
+++ b/openstack/arc/templates/api-deployment.yaml
@@ -53,9 +53,10 @@ spec:
 {{- if .Values.api.tls.enabled }}
             exec:
               command:
-                - sh
-                - -c
-                - cmp -s /tls/tls.crt /tmp/tls.crt.livenesspobe
+                - cmp
+                - -s
+                - /tls/tls.crt
+                - /tmp/tls.crt.livenesspobe
             initialDelaySeconds: 60
             periodSeconds: 60
 {{- else }}
