--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -17,6 +17,10 @@ spec:
       labels:
         name: supernova
     spec:
+      volumes:
+        - name: editors
+          configMap:
+            name: editors
       # The preStop hook below sleeps 30 seconds, extend the gracePeriod accordingly
       terminationGracePeriodSeconds: 60
       containers:
@@ -26,6 +30,11 @@ spec:
           ports:
             - name: http
               containerPort: 80
+
+          volumeMounts:
+            - name: editors
+              mountPath: '/home/app/webapp/config/editors.json'
+              readOnly: true     
           env:
             - name: REGION
               value: {{ .Values.region }}
