supernova: mount editors under config/users

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
 
           volumeMounts:
             - name: editors
-              mountPath: '/home/app/webapp/config/editors.json'
+              mountPath: '/home/app/webapp/config/users'
               readOnly: true     
           env:
             - name: REGION
