--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -131,7 +131,7 @@ data:
       - receiver: pagerduty_api
         continue: true
         match_re:
-          tier: os|k8s
+          tier: os|k8s|kks
           severity: critical
           cluster_type: controlplane
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-2|na-us-3
@@ -139,7 +139,7 @@ data:
       - receiver: slack_api_critical
         continue: false
         match_re:
-          tier: os|k8s
+          tier: os|k8s|kks
           severity: critical
           cluster_type: controlplane
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-2|na-us-3
@@ -147,7 +147,7 @@ data:
       - receiver: slack_api_warning
         continue: false
         match_re:
-          tier: os|k8s
+          tier: os|k8s|kks
           severity: warning
           cluster_type: controlplane
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-2|na-us-3
@@ -155,7 +155,7 @@ data:
       - receiver: slack_api_info
         continue: false
         match_re:
-          tier: os|k8s
+          tier: os|k8s|kks
           severity: info
           cluster_type: controlplane
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-2|na-us-3
