--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -2,6 +2,7 @@ dependencies:
   - name: blackbox-exporter
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
+    condition: blackbox-exporter.enabled
 
   - name: event-exporter
     repository: https://charts.eu-de-2.cloud.sap
