--- a/common/prometheus-alertmanager/templates/service.yaml
+++ b/common/prometheus-alertmanager/templates/service.yaml
@@ -4,16 +4,16 @@ kind: Service
 metadata:
   name: {{ include "alertmanager.fullname" . }}
   labels:
-    app: prometheus-alertmanager
+    app: alertmanager
     alertmanager: {{ include "alertmanager.name" . }}
 
 spec:
   selector:
-    app: prometheus-alertmanager
+    app: alertmanager
     alertmanager: {{ include "alertmanager.name" . }}
 
   ports:
     - name: http
       port: 9093
     - name: mesh
-      port: 6783
+      port: {{ required ".Values.mesh.port missing" .Values.mesh.port }}
