--- a/common/prometheus-alertmanager/values.yaml
+++ b/common/prometheus-alertmanager/values.yaml
@@ -13,6 +13,9 @@ image:
 # Mandatory name for this Alertmanager.
 name:
 
+# The number of replicas.
+replicas: 2
+
 # Retention for the Alertmanager. Only stores silences.
 # Valid units are ms|s|m|h.
 # 168h = 7 days.
@@ -20,6 +23,10 @@ retention: 168h
 
 # AdditionalPeers allows injecting a set of additional Alertmanagers to peer with to form a highly available cluster.
 additionalPeers: []
+
+# Alertmanager
+mesh:
+  port: 6783
 
 # Alertmanager configuration.
 # See https://prometheus.io/docs/alerting/configuration/#configuration-file .
@@ -102,8 +109,9 @@ logLevel: info
 # See: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container .
 resources:
   requests:
-    cpu: 4
-    memory: 8Gi
+    cpu: 10m
+    memory: 200Mi
+  limits: {}
 
 # A security context defines privilege and access control settings for a Pod or Container.
 # See: https://kubernetes.io/docs/tasks/configure-pod-container/security-context .
