infra snmp: arista snmpv3

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -95,6 +95,9 @@ apic_exporters:
 
 snmp_exporter:
   enabled: false
+  arista:
+    snmpv3:
+      enabled: false
   n9k:
     enabled: false
   ipn:
