fixes syntax error

--- a/system/kube-dns/templates/kubedns-deployment.yaml
+++ b/system/kube-dns/templates/kubedns-deployment.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 {{- else }}
 apiVersion: extensions/v1beta1 
-{{- end}}
+{{- end }}
 kind: Deployment
 metadata:
   name: kube-dns
@@ -141,7 +141,7 @@ spec:
         - name: kube-dns-config
           mountPath: /etc/k8s/dns/dnsmasq-nanny
       - name: sidecar
-        image: {{ .Values.images.dnsmasq-sidecar.repository }}:{{ .Values.images.dnsmasq-sidecar.tag }
+        image: {{ .Values.images.dnsmasq-sidecar.repository }}:{{ .Values.images.dnsmasq-sidecar.tag }}
         livenessProbe:
           httpGet:
             path: /metrics
