--- a/system/kube-dns/values.yaml
+++ b/system/kube-dns/values.yaml
@@ -5,10 +5,10 @@ images:
   kubedns:
     repository: sapcc/k8s-dns-kube-dns-amd64
     tag: 1.14.13
-  dnsmasq-nanny:
+  dnsmasq_nanny:
     repository: sapcc/k8s-dns-dnsmasq-nanny-amd64
     tag: 1.14.13
-  dns-sidecar:
+  dns_sidecar:
     repository: sapcc/k8s-dns-sidecar-amd64
     tag: 1.14.13
 
