--- a/system/kube-dns/templates/kubedns-deployment.yaml
+++ b/system/kube-dns/templates/kubedns-deployment.yaml
@@ -101,7 +101,7 @@ spec:
         - name: kube-dns-config
           mountPath: /kube-dns-config
       - name: dnsmasq
-        image: {{ .Values.images.dnsmasq-nanny.repository }}:{{ .Values.images.dnsmasq-nanny.tag }}
+        image: {{ .Values.images.dnsmasq_nanny.repository }}:{{ .Values.images.dnsmasq_nanny.tag }}
         livenessProbe:
           httpGet:
             path: /healthcheck/dnsmasq
@@ -141,7 +141,7 @@ spec:
         - name: kube-dns-config
           mountPath: /etc/k8s/dns/dnsmasq-nanny
       - name: sidecar
-        image: {{ .Values.images.dnsmasq-sidecar.repository }}:{{ .Values.images.dnsmasq-sidecar.tag }}
+        image: {{ .Values.images.dnsmasq_sidecar.repository }}:{{ .Values.images.dnsmasq_sidecar.tag }}
         livenessProbe:
           httpGet:
             path: /metrics
