--- a/system/kube-system-virtual/requirements.yaml
+++ b/system/kube-system-virtual/requirements.yaml
@@ -3,10 +3,6 @@ dependencies:
     repository: https://charts.eu-de-2.cloud.sap
     version: v0.0.1
 
-  - name: dex
-    repository: https://charts.eu-de-2.cloud.sap
-    version: 0.8.0
-
   - name: sysctl
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.0.1
@@ -14,19 +10,31 @@ dependencies:
   - name: kube-proxy 
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.5.0
-    condition: kube-proxy.enabled
 
   - name: kube-flannel 
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.11.0
-    condition: kube-flannel.enabled
 
   - name: metallb 
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.11.2
-    condition: metallb.enabled
 
   - name: wormhole 
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.0.1
-    condition: wormhole.enabled
+
+  - name: nginx-ingress
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 0.28.2
+
+  - name: node-problem-detector
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.2.1
+
+  - name: vice-president
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.9
+
+  - name: disco
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.1.2
