--- a/system/kube-monitoring-virtual/requirements.yaml
+++ b/system/kube-monitoring-virtual/requirements.yaml
@@ -1,7 +1,48 @@
 dependencies:
-  - name: kube-monitoring
+  - name: event-exporter
     repository: https://charts.eu-de-2.cloud.sap
-    version: 2.1.0
+    version: 0.1.2
+
+  - name: fluent-bit
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 1.8.0
+
+  - name: kube-state-metrics
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 1.5.0
+
+  - name: k8s-secrets-certificate-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
+  - name: ntp-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
+  - name: ping-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.0
+
+  - name: oomkill-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.2
+
+  - name: prometheus-node-exporter
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 1.6.0
+
   - name: prometheus-operator
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.0
+
+  - name: prometheus-server
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.2.2
+
+  - name: prometheus-kubernetes-rules
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.3
+
+  - name: prometheus-virtual-rules
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.0
