--- a/system/kube-monitoring-virtual/values.yaml
+++ b/system/kube-monitoring-virtual/values.yaml
@@ -1,14 +1,3 @@
-global:
-  clusterType: virtual
-
-  # Prometheus via operator.
-  prometheus_operated:
-    # The Prometheus collector is only used in the baremetal controlplane to aggregate cpu metrics and
-    # might be unnecessary in other environments.
-    # If the collector is disabled a `frontend` Prometheus is deployed.
-    collector:
-      enabled: false
-
 kube-state-metrics:
   podAnnotations:
     prometheus.io/scrape: "true"
@@ -70,7 +59,7 @@ prometheus-server:
   retentionTime: 7d
 
   additionalScrapeConfigs:
-    name: k8s-collector-additional-scrape-config
+    name: prometheus-additional-scrape-config
     key: scrape-config.yaml
 
   ingress:
@@ -90,3 +79,37 @@ prometheus-server:
   alertmanagers:
     - alertmanager.eu-de-1.cloud.sap
     - alertmanager.internet.eu-de-2.cloud.sap
+
+allowedMetrics:
+  # Full list of cAdvisor metrics: https://github.com/google/cadvisor/blob/master/docs/storage/prometheus.md .
+  cAdvisor:
+    - container_cpu_cfs_periods_total
+    - container_cpu_cfs_throttled_seconds_total
+    - container_cpu_cfs_throttled_periods_total
+    - container_cpu_usage_seconds_total
+    - container_cpu_user_seconds_total
+    - container_cpu_system_seconds_total
+    - container_fs_inodes_total
+    - container_fs_limit_bytes
+    - container_fs_usage_bytes
+    - container_last_seen
+    - container_memory_usage_bytes
+    - container_memory_working_set_bytes
+    - container_network_receive_bytes_total
+    - container_network_transmit_bytes_total
+    - container_start_time_seconds
+
+  # Full list of kubelet metrics: https://github.com/kubernetes/kubernetes/blob/master/pkg/kubelet/metrics/metrics.go#L33 .
+  kubelet:
+    - kubelet_pod_start_latency_microseconds
+    - kubelet_running_pod_count
+    - process_max_fds
+    - process_open_fds
+
+  # Full list of APIserver metrics: https://github.com/kubernetes/apiserver/blob/master/pkg/endpoints/metrics/metrics.go .
+  kubeAPIServer:
+    - apiserver_request_count
+    - apiserver_request_latencies_bucket
+    - etcd_object_counts
+    - process_max_fds
+    - process_open_fds
