--- a/system/kube-monitoring-virtual/values.yaml
+++ b/system/kube-monitoring-virtual/values.yaml
@@ -113,3 +113,6 @@ allowedMetrics:
     - etcd_object_counts
     - process_max_fds
     - process_open_fds
+
+  prometheus-kubernetes-rules:
+    prometheusName: kubernetes
