--- a/system/kube-monitoring-virtual/values.yaml
+++ b/system/kube-monitoring-virtual/values.yaml
@@ -116,3 +116,6 @@ allowedMetrics:
 
   prometheus-kubernetes-rules:
     prometheusName: kubernetes
+
+  prometheus-virtual-rules:
+    prometheusName: kubernetes
