--- a/system/kube-monitoring-virtual/values.yaml
+++ b/system/kube-monitoring-virtual/values.yaml
@@ -119,3 +119,8 @@ prometheus-kubernetes-rules:
 
 prometheus-virtual-rules:
   prometheusName: kubernetes
+
+ping-exporter:
+  targets: 
+    - ingress.admin.cloud.sap
+    - 8.8.8.8
