[keystone] don't scale down the api during the mariadb migration

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -261,7 +261,7 @@ mariadb:
 mysql_metrics:
   db_name: keystone
   db_user: root
-  db_password: DEFINED-IN-REGION-CHART
+  #db_password: DEFINED-IN-REGION-CHART
   customMetrics:
     - help: Total keystone role count
       name: openstack_roles_total
