--- a/common/mysql_metrics/values.yaml
+++ b/common/mysql_metrics/values.yaml
@@ -2,9 +2,9 @@ global:
   tld: cloud.sap
   region: local
 
-db_name: DEFINED-IN-COMPONENT-CHART
-db_user: DEFINED-IN-COMPONENT-CHART
-db_password: null
+#db_name: DEFINED-IN-COMPONENT-CHART
+#db_user: DEFINED-IN-COMPONENT-CHART
+#db_password: null
 
 port_metrics: '9237'
 port_metrics_promexp: '9104'
