flat kube-monitoring-scaleout

--- a/system/kube-monitoring-scaleout/requirements.yaml
+++ b/system/kube-monitoring-scaleout/requirements.yaml
@@ -1,7 +1,48 @@
 dependencies:
-  - name: kube-monitoring
+  - name: prometheus-operator
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 6.11.0
+
+  - name: blackbox-exporter
     repository: https://charts.eu-de-2.cloud.sap
-    version: 2.0.8
+    version: 1.0.0
+
+  - name: event-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.2
+
+  - name: fluent-bit
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 1.8.0
+    condition: fluent-bit.enabled
+
+  - name: kube-state-metrics
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 1.5.0
+
+  - name: k8s-secrets-certificate-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
+  - name: ntp-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
+
+  - name: oomkill-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.2
+
+  - name: prometheus-node-exporter
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 1.6.0
+
+  - name: prometheus-server
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 2.1.1
+
+  - name: prometheus-kubernetes-rules
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.3
 
   - name: prometheus-scaleout-rules
     repository: https://charts.eu-de-2.cloud.sap
