--- a/system/kube-system-virtual/requirements.yaml
+++ b/system/kube-system-virtual/requirements.yaml
@@ -30,3 +30,7 @@ dependencies:
   - name: vice-president
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.9
+
+  - name: disco
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.1.2
