--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -31,3 +31,8 @@ wormhole:
     ipAddress: 1.1.1.1
     port: 6443
   kubeConfig: /etc/kubernetes/kubelet/kubeconfig
+
+disco:
+  rbac:
+    create: true
+    serviceAccountName: disco
