--- a/system/disco/templates/serviceaccount.yaml
+++ b/system/disco/templates/serviceaccount.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.rbac.create .Values.rbac.serviceAccountName }}
-{{- if not (eq .Values.rbac.serviceAccountName" "default") }}
+{{- if not (eq .Values.rbac.serviceAccountName "default") }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
