fix syntax error

--- a/system/disco/templates/deployment.yaml
+++ b/system/disco/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
               containerPort: {{ required ".Values.metrics.port missing" .Values.metrics.port }}
 {{- if and .Values.rbac.create .Values.rbac.serviceAccountName }}
 {{- if not (eq .Values.rbac.serviceAccountName "default") }}
-          serviceAccountName: {{ required .Values.rbac.serviceAccountName }}
+          serviceAccountName: {{ .Values.rbac.serviceAccountName }}
 {{- end -}}
 {{- end -}}
       volumes:
