--- a/system/disco/templates/clusterrole.yaml
+++ b/system/disco/templates/clusterrole.yaml
@@ -14,4 +14,11 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - create
+      - patch
 {{- end }}
