--- a/system/kube-monitoring-scaleout/requirements.yaml
+++ b/system/kube-monitoring-scaleout/requirements.yaml
@@ -12,13 +12,12 @@ dependencies:
     version: 0.1.2
 
   - name: fluent-bit
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    version: 1.8.0
-    condition: fluent-bit.enabled
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 2.7.1
 
   - name: kube-state-metrics
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    version: 1.5.0
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 2.3.1
 
   - name: k8s-secrets-certificate-exporter
     repository: https://charts.eu-de-2.cloud.sap
@@ -33,7 +32,7 @@ dependencies:
     version: 0.1.2
 
   - name: prometheus-node-exporter
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://kubernetes-charts.storage.googleapis.com
     version: 1.6.0
 
   - name: prometheus-server
