disco dummy ingresses for ingress and sniffer A records

--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -36,3 +36,7 @@ disco:
   rbac:
     create: true
     serviceAccountName: disco
+
+externalIPs: {}
+# ingress: 10.11.12.13
+# sniffer: 10.11.12.14
