--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -1,3 +1,11 @@
+global:
+  region:
+  domain:
+
+externalIPs: 
+ ingress: 
+ sniffer: 
+
 container-linux-update-operator:
   rbac:
     create: true
@@ -36,7 +44,3 @@ disco:
   rbac:
     create: true
     serviceAccountName: disco
-
-externalIPs: {}
-# ingress: 10.11.12.13
-# sniffer: 10.11.12.14
