fix whitespace removal

--- a/system/kube-system-virtual/templates/ingress-disco.yaml
+++ b/system/kube-system-virtual/templates/ingress-disco.yaml
@@ -8,7 +8,7 @@ metadata:
     kubernetes.io/ingress.class: noop.disco
 spec:
   rules:
-  - host: ingress.virtual.{{- required ".Values.global.region missing" .Values.global.region -}}.{{- required ".Values.global.domain missing" .Values.global.domain -}}
+  - host: ingress.virtual.{{- required ".Values.global.region missing" .Values.global.region -}}.{{- required ".Values.global.domain missing" .Values.global.domain }}
     http:
       paths:
       - backend:
