remove sniffer disco again

--- a/system/kube-system-virtual/templates/ingress-disco.yaml
+++ b/system/kube-system-virtual/templates/ingress-disco.yaml
@@ -6,6 +6,7 @@ metadata:
     disco/record: {{ required ".Values.externalIPs.ingress" .Values.externalIPs.ingress }} 
     disco/record-type: A
     kubernetes.io/ingress.class: noop.disco
+  name: ingress-disco
 spec:
   rules:
   - host: ingress.virtual.{{- required ".Values.global.region missing" .Values.global.region -}}.{{- required ".Values.global.domain missing" .Values.global.domain }}
