fix syntax error

--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -43,3 +43,9 @@ disco:
   rbac:
     create: true
     serviceAccountName: disco
+
+vice-president:
+  president:
+    rbac:
+      create: true 
+      serviceAccountName: president
