--- a/system/vice-president/templates/serviceaccount.yaml
+++ b/system/vice-president/templates/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if and ..Values.president.rbac .Values.president.rbac.serviceAccountName }}
+{{- if and .Values.president.rbac .Values.president.rbac.serviceAccountName }}
 {{- if not (eq .Values.rbac.serviceAccountName "default") }}
 apiVersion: v1
 kind: ServiceAccount
