--- a/system/vice-president/templates/serviceaccount.yaml
+++ b/system/vice-president/templates/serviceaccount.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.president.rbac .Values.president.rbac.serviceAccountName }}
-{{- if not (eq .Values.rbac.serviceAccountName "default") }}
+{{- if not (eq .Values.president.rbac.serviceAccountName "default") }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
