allow to create/update events

--- a/system/vice-president/templates/clusterrole.yaml
+++ b/system/vice-president/templates/clusterrole.yaml
@@ -18,6 +18,13 @@ rules:
       - patch
       - watch
   - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - create
+      - update
+  - apiGroups:
       - extensions
     resources:
       - ingresses
