enable ingress ca

--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -5,6 +5,10 @@ global:
 externalIPs: 
   ingress: 
 
+ingress:
+  tls_client_auth:
+    enabled: true
+
 container-linux-update-operator:
   rbac:
     create: true
