adds default service discoveries to prometheus-server

--- a/common/prometheus-server/ci/test-values.yaml
+++ b/common/prometheus-server/ci/test-values.yaml
@@ -28,6 +28,16 @@ serviceDiscoveries:
     enabled: true
   pods:
     enabled: true
+  kubeAPIServer:
+    enabled: true
+  cAdvisor:
+    enabled: true
+  kubelet:
+    enabled: true
+  kubeDNS:
+    enabled: true
+  nodeExporter:
+    enabled: true
 
 # Send alerts to these alertmanagers.
 alertmanagers:
