--- a/common/prometheus-server/templates/podmonitors/pod-sd.yaml
+++ b/common/prometheus-server/templates/podmonitors/pod-sd.yaml
@@ -20,10 +20,10 @@ spec:
   namespaceSelector:
     any: true
 
-  endpoints:
+  podMetricsEndpoints:
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-      interval: 60s
-      scrapeTimeout: 55s
+      interval: {{ required ".Values.serviceDiscoveries.scrapeInterval  missing" .Values.serviceDiscoveries.scrapeInterval }}
+      scrapeTimeout: {{ required ".Values.serviceDiscoveries.scrapeTimeout  missing" .Values.serviceDiscoveries.scrapeTimeout }}
       scheme: http
       relabelings:
         - action: keep
@@ -63,8 +63,8 @@ spec:
 {{ include "prometheus.defaultRelabelConfig" . | indent 8 }}
 
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-      interval: 60s
-      scrapeTimeout: 55s
+      interval: {{ required ".Values.serviceDiscoveries.scrapeInterval  missing" .Values.serviceDiscoveries.scrapeInterval }}
+      scrapeTimeout: {{ required ".Values.serviceDiscoveries.scrapeTimeout  missing" .Values.serviceDiscoveries.scrapeTimeout }}
       scheme: http
       relabelings:
         - action: keep
@@ -76,7 +76,7 @@ spec:
             - __meta_kubernetes_pod_annotation_prometheus_io_targets
           regex: {{ include "prometheusTargetsValue" . | quote }}
         - action: keep
-          source_labels:
+          sourceLabels:
             - __meta_kubernetes_pod_annotation_prometheus_io_port_1
         - action: keep
           sourceLabels:
