--- a/common/prometheus-server/templates/servicemonitors/prometheus.yaml
+++ b/common/prometheus-server/templates/servicemonitors/prometheus.yaml
@@ -16,8 +16,8 @@ spec:
 
   endpoints:
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-      interval: 60s
-      scrapeTimeout: 55s
+      interval: {{ required ".Values.serviceDiscoveries.scrapeInterval  missing" .Values.serviceDiscoveries.scrapeInterval }}
+      scrapeTimeout: {{ required ".Values.serviceDiscoveries.scrapeTimeout  missing" .Values.serviceDiscoveries.scrapeTimeout }}
       port: http
       scheme: http
       relabelings:
