--- a/system/kube-monitoring-scaleout/values.yaml
+++ b/system/kube-monitoring-scaleout/values.yaml
@@ -18,9 +18,6 @@ prometheus-operator:
 
   prometheusOperator:
     createCustomResource: false
-    image:
-      repository: quay.io/coreos/prometheus-operator
-      tag: v0.29.0
     serviceAccount:
       create: false
     admissionWebhooks:
@@ -81,13 +78,6 @@ kube-state-metrics:
       memory: 150Mi
       cpu: 100m
 
-ntp-exporter:
-  image:
-    repository: hub.eu-de-1.cloud.sap/monsoon/ntp-exporter
-    tag: v1.0-7-gf28483e
-  ntp:
-    server: timehost1.cc.cloud.sap
-
 prometheus-node-exporter:
   image:
     repository: prom/node-exporter
@@ -122,10 +112,6 @@ prometheus-server:
 
   retentionTime: 7d
 
-  additionalScrapeConfigs:
-    name: prometheus-additional-scrape-config
-    key: scrape-config.yaml
-
   ingress:
     enabled: true
     host: prometheus-kubernetes
@@ -137,46 +123,22 @@ prometheus-server:
 
   serviceDiscoveries:
     pods:
-      enabled: false
+      enabled: true
+    kubeApiServer:
+      enabled: true
+    cAdvisor:
+      enabled: true
+    kubelet:
+      enabled: true
+    nodeExporter:
+      enabled: true
+    kubeDNS:
+      enabled: true
 
   # Send alerts to these alertmanagers.
   alertmanagers:
     - alertmanager.eu-de-1.cloud.sap
     - alertmanager.internet.eu-de-2.cloud.sap
-
-allowedMetrics:
-  # Full list of cAdvisor metrics: https://github.com/google/cadvisor/blob/master/docs/storage/prometheus.md .
-  cAdvisor:
-    - container_cpu_cfs_periods_total
-    - container_cpu_cfs_throttled_seconds_total
-    - container_cpu_cfs_throttled_periods_total
-    - container_cpu_usage_seconds_total
-    - container_cpu_user_seconds_total
-    - container_cpu_system_seconds_total
-    - container_fs_inodes_total
-    - container_fs_limit_bytes
-    - container_fs_usage_bytes
-    - container_last_seen
-    - container_memory_usage_bytes
-    - container_memory_working_set_bytes
-    - container_network_receive_bytes_total
-    - container_network_transmit_bytes_total
-    - container_start_time_seconds
-
-  # Full list of kubelet metrics: https://github.com/kubernetes/kubernetes/blob/master/pkg/kubelet/metrics/metrics.go#L33 .
-  kubelet:
-    - kubelet_pod_start_latency_microseconds
-    - kubelet_running_pod_count
-    - process_max_fds
-    - process_open_fds
-
-  # Full list of APIserver metrics: https://github.com/kubernetes/apiserver/blob/master/pkg/endpoints/metrics/metrics.go .
-  kubeAPIServer:
-    - apiserver_request_count
-    - apiserver_request_latencies_bucket
-    - etcd_object_counts
-    - process_max_fds
-    - process_open_fds
 
 prometheus-kubernetes-rules:
   prometheusName: kubernetes
