--- a/prometheus-exporters/ntp-exporter/values.yaml
+++ b/prometheus-exporters/ntp-exporter/values.yaml
@@ -1,5 +1,6 @@
 image:
-  repository: DEFINED-BY-VALUES
-  tag: DEFINED-BY-VALUES
+  repository: sapcc/ntp-exporter
+  tag: v1.0-7-gf28483e
+
 ntp:
-  server: DEFINED-BY-VALUES
+  server: timehost1.cc.cloud.sap
