--- a/common/prometheus-server/templates/podmonitors/pod-sd.yaml
+++ b/common/prometheus-server/templates/podmonitors/pod-sd.yaml
@@ -78,6 +78,7 @@ spec:
         - action: keep
           sourceLabels:
             - __meta_kubernetes_pod_annotation_prometheus_io_port_1
+          regex: '\d+'
         - action: keep
           sourceLabels:
             - __meta_kubernetes_pod_container_port_number
