--- a/prometheus-exporters/ntp-exporter/values.yaml
+++ b/prometheus-exporters/ntp-exporter/values.yaml
@@ -4,3 +4,23 @@ image:
 
 ntp:
   server: timehost1.cc.cloud.sap
+
+resources:
+  requests:
+    memory: 40Mi
+    cpu: 10m
+  limits:
+    memory: 100Mi
+    cpu: 20m
+
+metrics:
+  port: 9100
+  hostPort: 9101
+
+# Deploy Namespace exporters Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: kubernetes
+  # The tier of the alert.
+  tier: k8s
