--- a/system/kube-monitoring-scaleout/values.yaml
+++ b/system/kube-monitoring-scaleout/values.yaml
@@ -85,11 +85,11 @@ prometheus-node-exporter:
   extraArgs:
     - --collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)
     - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tmpfs|tracefs)$$
-    - --collector.processes
     - --path.rootfs=/rootfs
     - --collector.systemd.enable-task-metrics
     - --collector.systemd.enable-restarts-metrics
     - --collector.systemd.enable-start-time-metrics
+    - --collector.processes
 
   extraHostVolumeMounts:
     - name: dbus
@@ -124,7 +124,7 @@ prometheus-server:
   serviceDiscoveries:
     pods:
       enabled: true
-    kubeApiServer:
+    kubeAPIServer:
       enabled: true
     cAdvisor:
       enabled: true
