--- a/system/kube-monitoring-scaleout/values.yaml
+++ b/system/kube-monitoring-scaleout/values.yaml
@@ -36,13 +36,9 @@ prometheus-operator:
   # Disable the Alertmanager instance. We deploy our own Alertmanagers.
   alertmanager:
     enabled: false
-  # Exporter section:
-  # Enable/Disable exporters.
-  # Deploys the service and servicemonitor.
+  # Disable all exporters.
   kubeApiServer:
-    enabled: true
-    serviceMonitor:
-      jobLabel: kube-apiserver
+    enabled: false
   kubelet:
     enabled: false
   kubeControllerManager:
