[nova] Set per-HV reservation defaults
We later want to set different values for the hypervisors running HANA,
but for now need to reserve some head-space for the HV-software on every
ESXi host in nova. This does not ensure the space on every HV, but
rather makes nova not fill up the cluster too much with our limited
possibilities of managing the cluster from nova-side.
For more explanations, please have a look at the sapcc/nova repository's
commits regarding this feature.

5 % is the current minimum we got as recommendation from VMware
consultants.

--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
@@ -57,4 +57,7 @@ template: |
       serial_port_proxy_uri = telnet://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.telnet.portExternal }}
       serial_log_uri = http://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.web.portExternal }}
       {{- end }}
+      hostgroup_reservations_json_file = /etc/nova/hostgroup-reservations.json
+    hostgroup-reservations.json: |
+      {"__default__": {"vcpus_percent": 5, "memory_percent": 5} }
   {{ end }}
