--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-deployment-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-deployment-vct.yaml
@@ -87,6 +87,10 @@ template: |
             name: hypervisor-config
             subPath: nova-compute.conf
             readOnly: true
+          - mountPath: /etc/nova/hostgroup-reservations.json
+            name: hypervisor-config
+            subPath: hostgroup-reservations.json
+            readOnly: true
           - mountPath: /etc/sudoers
             name: nova-etc
             subPath: sudoers
