[keystone] leave mariadb disabled per default for now

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -251,7 +251,7 @@ memcached:
       cpu: 500m
 
 mariadb:
-  enabled: true
+  enabled: false
   name: keystone
   initdb_configmap: keystone-initdb
 
