--- a/openstack/keystone/templates/configmap-mariadb-migration.yaml
+++ b/openstack/keystone/templates/configmap-mariadb-migration.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.mariadb.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -14,3 +15,4 @@ data:
 {{ include (print .Template.BasePath "/bin/_mariadb_pre_migration.sh.tpl") . | indent 4 }}
   post-upgrade.sh: |
 {{ include (print .Template.BasePath "/bin/_mariadb_post_migration.sh.tpl") . | indent 4 }}
+{{- end }}
