--- a/system/kube-monitoring-scaleout/values.yaml
+++ b/system/kube-monitoring-scaleout/values.yaml
@@ -59,15 +59,14 @@ prometheus-operator:
     enabled: false
 
 kube-state-metrics:
-  podAnnotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "8080"
-    prometheus.io/port_1: "8081"
-    prometheus.io/targets: "kubernetes"
+  customLabels:
+    app: kube-state-metrics
 
-  # This avoid double scraping of metrics caused by setting the `prometheus.io/scrape: "true"` annotation on the service.
-  # We already have the annotations on the kube-state-metrics pod.
-  prometheusScrape: false
+  service:
+    annotations:
+      prometheus.io/port: "8080"
+      prometheus.io/port_1: "8081"
+      prometheus.io/targets: "kubernetes"
 
   resources:
     requests:
