--- a/system/kube-monitoring-virtual/requirements.yaml
+++ b/system/kube-monitoring-virtual/requirements.yaml
@@ -4,12 +4,12 @@ dependencies:
     version: 0.1.2
 
   - name: fluent-bit
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    version: 1.8.0
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 2.7.1
 
   - name: kube-state-metrics
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    version: 1.5.0
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 2.4.0
 
   - name: k8s-secrets-certificate-exporter
     repository: https://charts.eu-de-2.cloud.sap
@@ -17,7 +17,7 @@ dependencies:
 
   - name: ntp-exporter
     repository: https://charts.eu-de-2.cloud.sap
-    version: 1.0.0
+    version: 1.0.2
 
   - name: ping-exporter
     repository: https://charts.eu-de-2.cloud.sap
@@ -32,16 +32,16 @@ dependencies:
     version: 1.6.0
 
   - name: prometheus-operator
-    repository: https://charts.eu-de-2.cloud.sap
-    version: 1.0.0
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 6.11.0
 
   - name: prometheus-server
     repository: https://charts.eu-de-2.cloud.sap
-    version: 1.2.2
+    version: 2.2.2
 
   - name: prometheus-kubernetes-rules
     repository: https://charts.eu-de-2.cloud.sap
-    version: 1.0.3
+    version: 1.0.5
 
   - name: prometheus-virtual-rules
     repository: https://charts.eu-de-2.cloud.sap
