--- a/system/kube-system-scaleout/requirements.yaml
+++ b/system/kube-system-scaleout/requirements.yaml
@@ -3,18 +3,13 @@ dependencies:
     repository: https://charts.eu-de-2.cloud.sap
     version: v0.0.1
 
-  - name: conntrack-nanny
-    repository: https://charts.eu-de-2.cloud.sap
-    version: 0.1.0
-    condition: conntrack-nanny.enabled
-
   - name: dex
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.8.0
 
   - name: kubernetes-dashboard
-    repository: https://charts.eu-de-2.cloud.sap
-    version: 1.6.1
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 1.10.0
 
   - name: nginx-ingress
     repository: https://kubernetes-charts.storage.googleapis.com
@@ -35,12 +30,6 @@ dependencies:
   - name: disco
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.1.2
-    condition: disco.enabled
-
-  - name: kube-proxy 
-    repository: https://charts.eu-de-2.cloud.sap
-    version: 0.5.0
-    condition: kube-proxy.enabled
 
   - name: kubernikus-rbac
     repository: https://charts.eu-de-2.cloud.sap
