--- a/system/kube-system-scaleout/values.yaml
+++ b/system/kube-system-scaleout/values.yaml
@@ -14,12 +14,14 @@ vice-president:
   president:
     rbac:
       create: true
+      serviceAccountName: president
 
 disco:
   enabled: false
 
   rbac:
     create: true
+    serviceAccountName: disco
 
   # No OpenStackSeeder available in scaleout clusters.
   seed:
@@ -71,6 +73,10 @@ nginx-ingress:
 
     extraArgs:
       annotations-prefix: ingress.kubernetes.io
+
+    service:
+      #helm3 workaround. see: https://github.com/helm/helm/issues/6378
+      omitClusterIP: "true"
 
     metrics:
       enabled: true
