--- a/system/kube-system-scaleout/values.yaml
+++ b/system/kube-system-scaleout/values.yaml
@@ -76,7 +76,7 @@ nginx-ingress:
 
     service:
       #helm3 workaround. see: https://github.com/helm/helm/issues/6378
-      omitClusterIP: "true"
+      omitClusterIP: true
 
     metrics:
       enabled: true
@@ -109,6 +109,10 @@ nginx-ingress:
     image:
       repository: sapcc/defaultbackend
       tag: '1.5'
+
+    service:
+      #helm3 workaround. see: https://github.com/helm/helm/issues/6378
+      omitClusterIP: true
 
     podAnnotations:
       prometheus.io/scrape: "true"
