--- a/system/kube-system-scaleout/values.yaml
+++ b/system/kube-system-scaleout/values.yaml
@@ -80,6 +80,9 @@ nginx-ingress:
 
     metrics:
       enabled: true
+      service:
+        #helm3 workaround. see: https://github.com/helm/helm/issues/6378
+        omitClusterIP: true
       serviceMonitor:
         enabled: true
         additionalLabels:
