adds disco again

--- a/system/kube-system-kubernikus/values.yaml
+++ b/system/kube-system-kubernikus/values.yaml
@@ -11,3 +11,8 @@ vice-president:
     rbac:
       create: true 
       serviceAccountName: president
+
+disco:
+  rbac:
+    create: true
+    serviceAccountName: disc
