--- a/common/mariadb/templates/deployment.yaml
+++ b/common/mariadb/templates/deployment.yaml
@@ -21,12 +21,17 @@ spec:
       annotations:
         checksum/secrets: {{ include (print $.Template.BasePath  "/secret.yaml") . | sha256sum }}
         checksum/etc: {{ include (print $.Template.BasePath  "/etc-configmap.yaml") . | sha256sum }}
+{{- if .Values.metrics.enabled }}
+        prometheus.io/scrape: "true"
+        prometheus.io/port: {{ required ".Values.metrics.port missing" .Values.metrics.port | quote }}
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
+{{- end }}
 
     spec:
       containers:
       - name: mariadb
         image: {{.Values.image}}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: {{ default "IfNotPresent" .Values.imagePullPolicy | quote }}
         env:
         - name:  MYSQL_ROOT_PASSWORD
           valueFrom:
@@ -56,6 +61,8 @@ spec:
           successThreshold: {{ .Values.readinessProbe.successThreshold }}
           failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
         {{- end }}
+        resources:
+{{ toYaml (required "missing .resources" .Values.resources) | indent 10 }}
         volumeMounts:
 {{- if .Values.persistence_claim.enabled }}
           - name: mariadb-persistent-storage
@@ -77,7 +84,7 @@ spec:
         imagePullPolicy: IfNotPresent
         env:
           - name: MYSQL_ROOT_PASSWORD
-            value: {{ .Values.root_password }}
+            value: {{ required ".Values.root_password missing" .Values.root_password }}
           - name: MY_POD_NAME
             value: mysql-backup-{{ .Values.name }}
           - name: MY_POD_NAMESPACE
@@ -112,6 +119,46 @@ spec:
 {{- end }}
         - mountPath: /db/socket
           name: db-socket
+{{- end }}
+{{- if .Values.metrics.enabled }}
+      - name: metrics
+        image: {{ .Values.metrics.image }}:{{ .Values.metrics.image_version }}
+        imagePullPolicy: {{ default "IfNotPresent" .Values.imagePullPolicy | quote }}
+        args:
+        {{- range $flag := .Values.metrics.flags }}
+          - "--{{$flag}}"
+        {{- end }}
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 9104
+            scheme: HTTP
+          periodSeconds: 20
+          timeoutSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 9104
+            scheme: HTTP
+          periodSeconds: 20
+          timeoutSeconds: 10
+        env:
+          - name: DATA_SOURCE_NAME
+            value: root:{{ required ".Values.root_password missing" .Values.root_password }}@tcp({{ include (print .Release.Name "_db_host") . }}:3306)/
+          - name: LOGLEVEL
+            value: {{ default "info" .Values.metrics.loglevel }}
+        ports:
+          - name: metrics
+            containerPort: {{ required ".Values.metrics.port missing" .Values.metrics.port }}
+        {{- if .Values.metrics.resources.enabled }}
+        resources:
+          limits:
+            cpu: {{ .Values.metrics.resources.limits.cpu | quote }}
+            memory: {{ .Values.metrics.resources.limits.memory | quote }}
+          requests:
+            cpu: {{ .Values.metrics.resources.requests.cpu | quote }}
+            memory: {{ .Values.metrics.resources.requests.memory | quote }}
+        {{- end }}
 {{- end }}
       volumes:
         - name: mariadb-etc
