--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -258,66 +258,89 @@ mariadb:
   persistence_claim:
     name: db-keystone-pvclaim
 
+  resources:
+    requests:
+      cpu: 500m
+      memory: 500Mi
+
 mysql_metrics:
   db_name: keystone
   db_user: root
   #db_password: DEFINED-IN-REGION-CHART
   customMetrics:
-    - help: Total keystone role count
-      name: openstack_roles_total
+    - name: openstack_roles_total
+      help: Total keystone role count
       query: |
         SELECT 
-          COUNT(*) as gauge 
+          COUNT(*) as roles
         FROM role
       values:
-      - "gauge"
-    - help: Total keystone user count
-      name: openstack_users_total
+      - "roles"
+    - name: openstack_users_total
+      help: Total keystone user count
       query: |
         SELECT 
-          COUNT(*) as gauge 
+          COUNT(*) as users
         FROM id_mapping 
         WHERE entity_type = 'user'
       values:
-      - "gauge"
-    - help: Total keystone project count
-      name: openstack_projects_total
+      - "users"
+    - name: openstack_groups_total
+      help: Total keystone group count
       query: |
-        SELECT 
-          COUNT(*) as gauge
+        SELECT
+          COUNT(*) as groups
+        FROM id_mapping
+        WHERE entity_type = 'group'
+      values:
+      - "groups"
+    - name: openstack_domains_total
+      help: Total keystone domain count
+      query: |
+        SELECT
+          COUNT(*) - 1 as domains
+        FROM project
+        WHERE domain_id = '<<keystone.domain.root>>'
+      values:
+      - "domains"
+    - name: openstack_projects_total
+      help: Total keystone project count
+      query: |
+        SELECT
+          COUNT(*) as projects
         FROM project
         WHERE domain_id != '<<keystone.domain.root>>'
       values:
-      - "gauge"
-    - help: Total keystone role-assignment count
-      name: openstack_assignments_total
+      - "projects"
+    - name: openstack_assignments_total
+      help: Total keystone role-assignment count
       query: |
         SELECT 
-          COUNT(*) as gauge 
+          COUNT(*) as role_assignments
         FROM assignment
       values:
-      - "gauge"
-    - help: Total keystone token revocation count
-      name: openstack_revocations_total
+      - "role_assignments"
+    - name: openstack_revocations_total
+      help: Total keystone token revocation count
       query: |
         SELECT 
-          COUNT(*) as gauge 
+          COUNT(*) as revocations
         FROM revocation_event
       values:
-      - "gauge"
-    - help: Total keystone role-assignment count per role
+      - "revocations"
+    - name: openstack_assignments_per_role
+      help: Total keystone role-assignment count per role
       labels:
       - "role_name"
-      name: openstack_assignments_per_role
       query: |
         SELECT
-          COUNT(*) as gauge,
+          COUNT(*) as assignments,
           r.name AS role_name
         FROM assignment a
         JOIN role r ON r.id = a.role_id
         GROUP BY r.name
       values:
-      - "gauge"
+      - "assignments"
 
 postgresql:
   enabled: true
