--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -341,6 +341,17 @@ mysql_metrics:
         GROUP BY r.name
       values:
       - "assignments"
+    - name: mysql_database_size
+      help: Total database size
+      labels:
+      - "schema_name"
+      query: |
+          SELECT table_schema AS schema_name,
+            ROUND(SUM(data_length + index_length) / 1024 / 1024, 1) AS size_in_mb
+          FROM information_schema.tables
+          GROUP BY table_schema
+      values:
+      - "size_in_mb"
 
 postgresql:
   enabled: true
