[mariadb] added the name label that is expected by the mariadb grafana dashboard

--- a/common/mariadb/templates/deployment.yaml
+++ b/common/mariadb/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
     metadata:
       labels:
         app: {{ include "fullName" . }}
+        name: {{ template "fullname" . }}
       annotations:
         checksum/secrets: {{ include (print $.Template.BasePath  "/secret.yaml") . | sha256sum }}
         checksum/etc: {{ include (print $.Template.BasePath  "/etc-configmap.yaml") . | sha256sum }}
