--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -7,6 +7,13 @@ global:
   # cluster:
   # clusterType:
 
+# Name of the Prometheus to publish to
+  alerts:
+    prometheus: infra-frontend
+
+  aggregations:
+    prometheus: infra-frontend
+
 # Values for Infrastructure Prometheus Frontend.
 prometheus-infra-frontend:
   name: infra-frontend
@@ -49,10 +56,6 @@ authentication:
   # ssoCert:
   # ssoKey:
 
-# Basic alerts for global Prometheus.
-alerts:
-  prometheus: infra-frontend
-
-aggregations:
-  prometheus: infra-frontend
+interconnect_sre:
+  enabled: true
 
