--- a/system/prometheus-infra/requirements.yaml
+++ b/system/prometheus-infra/requirements.yaml
@@ -4,3 +4,9 @@ dependencies:
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.1.23
     condition: prometheus-infra-frontend.enabled
+
+  - name: interconnect-sre
+    alias: interconnect_sre
+    repository: file://vendor/interconnect-sre
+    version: 0.1.0
+    condition: interconnect_sre.enabled
