moving out of maia

--- a/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: jumpserver-exporter 
-  namespace: maia 
+  namespace: infra-monitoring
 spec:
   selector:
     matchLabels:
