let the operator create the crds

--- a/system/kube-monitoring-kubernikus/values.yaml
+++ b/system/kube-monitoring-kubernikus/values.yaml
@@ -13,6 +13,7 @@ prometheus-operator:
   fullnameOverride: prometheus
 
   prometheusOperator:
+    createCustomResource: false
     serviceAccount:
       create: false
     admissionWebhooks:
