--- a/system/kube-monitoring-kubernikus/templates/prometheus-additional-scrape-config.yaml
+++ b/system/kube-monitoring-kubernikus/templates/prometheus-additional-scrape-config.yaml
@@ -8,5 +8,5 @@ metadata:
     prometheus: kubernikus
 
 data:
-  scrape-config.yaml: {{- tpl .Values.extraScrapeConfig . | b64enc -}}
+  scrape-config.yaml: {{ tpl .Values.extraScrapeConfig . | b64enc -}}
 {{ end }}
