fix secret name

--- a/prometheus-exporters/blackbox-exporter/templates/deployment.yaml
+++ b/prometheus-exporters/blackbox-exporter/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
