--- a/prometheus-exporters/blackbox-exporter/templates/service.yaml
+++ b/prometheus-exporters/blackbox-exporter/templates/service.yaml
@@ -6,10 +6,10 @@ metadata:
     app: {{ template "blackbox-exporter.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ required ".Values.service.type missing" .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ required ".Values.service.port missing" .Values.service.port }}
       protocol: TCP
-      name: {{ .Values.service.name }}
+      name: {{ required ".Values.service.name missing" .Values.service.name }}
   selector:
     app: {{ .Chart.Name }}
