fix namespace for dashboards

--- a/system/kube-monitoring-kubernikus/values.yaml
+++ b/system/kube-monitoring-kubernikus/values.yaml
@@ -194,7 +194,7 @@ grafana:
       prometheus.io/probe: "true"
       nginx.ingress.kubernetes.io/configuration-snippet: |
         rewrite ^/$ /dashboard/db/kubernikus?refresh=1m&orgId=1&kiosk=true redirect;
-      nginx.ingress.kubernetes.io/auth-tls-secret: "kubernikus-system/ca-crt"
+      nginx.ingress.kubernetes.io/auth-tls-secret: "kube-system/ingress-cacrt"
       nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
       nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
 
@@ -216,14 +216,14 @@ grafana:
       # Label that configmaps with dashboards should have to be added.
       label: kubernikus-grafana-dashboard
       # Only search for dashboards in the specified namespace.
-      searchNamespace: kubernikus-system
+      searchNamespace: kubernikus-monitoring
 
     datasources:
       enabled: true
       # Label that configmaps with datasources should have to be added.
       label: kubernikus-grafana-datasource
       # Only search for dashboards in the specified namespace.
-      searchNamespace: kubernikus-system
+      searchNamespace: kubernikus-monitoring
 
   grafana.ini:
     paths:
