--- a/system/node-problem-detector/values.yaml
+++ b/system/node-problem-detector/values.yaml
@@ -17,15 +17,18 @@ prometheus:
   port: 20257
   targets: kubernetes
 
+# Additional system log monitors.
 systemLogMonitors:
   - kernel-monitor.json
 
+# Additional custom plugin monitors.
 customPluginMonitors:
-  - bridge-monitor.json
+  # - bridge-monitor.json
 
-additionalHostVolumeMounts:
+# Additional volume mounts from host.
+additionalHostVolumeMounts: []
   # Required by the bridge monitor.
-  - name: hostproc
-    hostPath: /proc
-    mountPath: /host/proc
-    readOnly: true
+  #- name: hostproc
+  #  hostPath: /proc
+  #  mountPath: /host/proc
+  #  readOnly: true
