--- a/system/kube-system-kubernikus/templates/ingress-cacrt-secret.yaml
+++ b/system/kube-system-kubernikus/templates/ingress-cacrt-secret.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.ingress.tls_client_auth.enabled }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -7,5 +6,4 @@ metadata:
   name: ingress-cacrt
 
 data:
-  ca.crt: {{ default "" .Values.ingress.tls_client_auth.cacrt | b64enc | quote }}
-{{- end }}
+  ca.crt: {{ required ".Values.ingress.tls_client_auth.cacrt" .Values.ingress.tls_client_auth.cacrt | b64enc | quote }}
